# doctags

./: .doctags.toml  Cargo.toml  README.md
doctags/: Cargo.toml
doctags-cli/: Cargo.toml
doctags-cli/src/: main.rs  ui.rs
doctags/src/: config.rs  doctags.rs  index.rs  lib.rs  search.rs  vfs.rs  walk.rs
doctagsfs/: Cargo.toml
doctagsfs/src/: fusefs.rs  main.rs  vfs.rs
src/: config.rs  doctags.rs  index.rs  main.rs  path_util.rs  search.rs  walk.rs
