[package]
name = "doctags"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tantivy = "0.11"
ignore = "0.4"
memchr = "2.1"
toml = "0.5"
env_logger = "0.7"
log = "0.4"
