[package]
name = "doctags-cli"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "doctags"

[dependencies]
doctags = { path = "../doctags" }
tantivy = "0.11"
failure = "0.1" # Required for converting tantivy errors
log = "0.4"
env_logger = "0.7"
anyhow = "1.0"
structopt = { version = "0.3", default-features = false }
crossterm = "0.15"
ansi_term = "0.11"
