[package]
name = "doctags"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

[dependencies]
tantivy = "0.11"
ignore = "0.4"
memchr = "2.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
anyhow = "1.0"
app_dirs = "1.2"
regex = "1.3"
lazy_static = "1.4"
indicatif = "0.13"
